
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int int32 ;


 int RENDEZVOUS_BGW_LOADER_API_VERSION ;
 void** find_rendezvous_variable (int ) ;

extern int
ts_bgw_loader_api_version(void)
{
 void **versionptr = find_rendezvous_variable(RENDEZVOUS_BGW_LOADER_API_VERSION);

 if (*versionptr == ((void*)0))
  return 0;
 return *((int32 *) *versionptr);
}
