; ModuleID = '/home/carl/AnghaBench/timescaledb/src/bgw/extr_launcher_interface.c_ts_bgw_loader_api_version.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/bgw/extr_launcher_interface.c_ts_bgw_loader_api_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RENDEZVOUS_BGW_LOADER_API_VERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_bgw_loader_api_version() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8**, align 8
  %3 = load i32, i32* @RENDEZVOUS_BGW_LOADER_API_VERSION, align 4
  %4 = call i8** @find_rendezvous_variable(i32 %3)
  store i8** %4, i8*** %2, align 8
  %5 = load i8**, i8*** %2, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %14

9:                                                ; preds = %0
  %10 = load i8**, i8*** %2, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %9, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i8** @find_rendezvous_variable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
